--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
+/*----------- Estilos globales -----------*/
+@import "./globals.css";
+@import "typography.css";
+@import "./buttons.css";
+
+/*----------- Estilos de páginas -----------*/
+@import "./home.css"; /* Vacío */
+@import "./about.css"; /* Vacío */
+@import "./services.css";
+
 * {
   /* border: 1px solid red; */
 }
@@ -137,30 +147,6 @@ button:focus,
 
 textarea {
   resize: none;
-}
-
-.hide {
-  display: none;
-}
-
-.hero {
-  width: 100%;
-  block-size: 90dvh;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* margin-bottom: 10rem; */
-}
-
-.back-video {
-  position: absolute;
-  inline-size: 100dvw;
-  block-size: 80dvh;
-  top: 0;
-  right: 0;
-  border: 0;
-  z-index: -1;
 }
 
 @media (min-width: 1200px) {
@@ -1100,6 +1086,7 @@ h5,
 h6 {
   color: #0e204d;
   font-family: "Quicksand", sans-serif;
+  text-transform: capitalize;
   font-weight: 700;
   line-height: 1.3;
   margin-bottom: 20px;
@@ -1320,7 +1307,7 @@ h6 {
     page title
 -------------------------*/
 .header-transparent + .page-title {
-  margin-top: -3rem;
+  margin-top: -135px;
 }
 
 .pagetitle__subheading {
@@ -1344,8 +1331,8 @@ h6 {
 }
 
 .page-title {
-  padding-top: 5rem;
-  padding-bottom: 7rem;
+  padding-top: 110px;
+  padding-bottom: 120px;
 }
 .page-title .breadcrumb-item a,
 .page-title .breadcrumb-item.active,
@@ -1444,13 +1431,13 @@ h6 {
 /* Medium Size Devices */
 @media (min-width: 768px) and (max-width: 991px) {
   .page-title {
-    padding-bottom: 4rem;
+    padding-bottom: 70px;
   }
 }
 /* Mobile Phones and tablets */
 @media (min-width: 320px) and (max-width: 767px) {
   .page-title {
-    padding-bottom: 3rem;
+    padding-bottom: 50px;
   }
   .page-title .pagetitle__subheading {
     font-size: 14px;
@@ -2113,11 +2100,9 @@ input[type="radio"] {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  min-inline-size: 6rem;
-  gap: 0.5rem;
 }
 .social-icons li {
-  /* margin-right: 10px; */
+  margin-right: 10px;
 }
 .social-icons li a {
   position: relative;
@@ -2361,12 +2346,6 @@ input[type="radio"] {
     flex: 0 0 100%;
     max-width: 100%;
   }
-  .hero {
-    block-size: 40dvh;
-  }
-  .back-video {
-    block-size: 40dvh;
-  }
 }
 /*------------------------
     Animations
@@ -2520,6 +2499,15 @@ input[type="radio"] {
   box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.2);
 }
 
+.hero {
+  /*   width: 100%; */
+  height: 500px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 150px;
+}
 .p_text {
   position: absolute;
   display: flex;
@@ -2529,8 +2517,13 @@ input[type="radio"] {
   color: #000000;
   font-size: 25px;
 }
-
-/* @media (min-aspect-ratio: 16/9) {
+.back-video {
+  position: absolute;
+  right: 0;
+  border: 0;
+  z-index: -1;
+}
+@media (min-aspect-ratio: 16/9) {
   .back-video {
     width: 100%;
     height: auto;
@@ -2541,7 +2534,7 @@ input[type="radio"] {
     width: auto;
     height: 100%;
   }
-} */
+}
 
 /*----------------------
     Pre Loader
@@ -2678,11 +2671,9 @@ input[type="radio"] {
   top: 0;
   transform: rotate(45deg);
 }
-.navbar-nav {
-  gap: 0.5rem;
-}
 .navbar .nav__item {
   position: relative;
+  margin-right: 29px;
 }
 .navbar .nav__item:last-child {
   margin-right: 0;
@@ -2694,8 +2685,9 @@ input[type="radio"] {
   display: block;
   position: relative;
   color: var(--color_principal);
-  line-height: 4.75rem;
-  padding-inline: 0.5rem;
+  line-height: 100px;
+  letter-spacing: 0.4px;
+  padding-right: 15px;
 }
 .navbar .nav__item .nav__item-link:before {
   content: "";
@@ -2723,8 +2715,10 @@ input[type="radio"] {
   font-weight: 900;
   border: none;
   vertical-align: middle;
+  margin-left: 0;
   position: absolute;
   top: 50%;
+  right: 0;
   transform: translateY(-50%);
 }
 .navbar .dropdown-menu {
@@ -2778,59 +2772,6 @@ input[type="radio"] {
 .navbar-actions > li:last-child {
   margin-right: 0;
 }
-.features-card {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  justify-content: center;
-  gap: 2rem;
-}
-.features-card-img {
-  border-radius: 25%;
-  justify-self: center;
-  max-inline-size: 12rem;
-  aspect-ratio: 1/1;
-}
-.features-card-text {
-  max-inline-size: 60ch;
-  text-align: start;
-}
-.features-card-details {
-  display: grid;
-  grid-template-columns: 4.5rem 1fr;
-  gap: 0.5rem;
-  align-items: center;
-  margin-block: 1rem;
-}
-.frame {
-  aspect-ratio: 1 / 1;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.frame > img,
-.frame > video {
-  inline-size: 100%;
-  block-size: 100%;
-  object-fit: cover;
-}
-.cluster {
-  display: flex;
-  flex-wrap: wrap;
-  gap: var(--space, 1rem);
-  justify-content: flex-start;
-  align-items: flex-start;
-}
-
-.features-icon {
-  flex-basis: 0;
-  display: flex;
-  justify-items: center;
-  block-size: 5rem;
-  inline-size: 5rem;
-  padding: 0.75rem;
-}
 
 .action__btn {
   color: var(--color_principal);
@@ -2879,23 +2820,11 @@ input[type="radio"] {
 
 /* header topbar */
 .header-topbar {
-  block-size: 4rem;
+  height: 60px;
   display: flex;
-  flex-direction: row;
   align-items: center;
   background-color: var(--color_principal);
 }
-
-.header-grid {
-  display: grid;
-  grid-template-columns: 1fr max-content;
-}
-
-.contact-grid {
-  display: grid;
-  grid-template-columns: max-content 1fr 1fr;
-}
-
 .header-topbar .contact__list li {
   position: relative;
   display: flex;
@@ -2992,7 +2921,7 @@ input[type="radio"] {
 
 .header-layout2 .header-topbar > .container-fluid > .row,
 .header-layout3 .header-topbar > .container-fluid > .row {
-  height: 4rem;
+  height: 60px;
 }
 .logo-dark {
   width: 200px;
@@ -3389,7 +3318,7 @@ input[type="radio"] {
   }
   .navbar > .container-fluid,
   .header-topbar > .container-fluid {
-    padding-inline: 3rem;
+    padding-left: 50px;
     padding-right: 50px;
   }
   .header-layout3 .topbar__text {
@@ -3835,7 +3764,7 @@ input[type="radio"] {
 .accordion-item .accordion__title {
   font-family: "Quicksand", sans-serif;
   font-weight: 700;
-  font-size: 1.125rem;
+  font-size: 18px;
   cursor: pointer;
   display: block;
   position: relative;
