--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1086,7 +1086,7 @@ h5,
 h6 {
   color: #0e204d;
   font-family: "Quicksand", sans-serif;
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
   font-weight: 700;
   line-height: 1.3;
   margin-bottom: 20px;
